--- a/stlye.css
+++ b/stlye.css
@@ -1,13 +1,34 @@
-body{
-    background-color:rgb(129, 126, 126) ;
-}
-
 img li ul a{
     margin: 0%;
     padding: 0%;
     font-family: 'Times New Roman';
-     
 }
+
+ul li a {
+    display: block;
+    padding: 10px 10px;
+    color: #473838;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+}
+
+ul li ul.dropdown {
+    width: 100%;
+    background: white;
+    position: absolute;
+    top: 40px;
+    z-index: 999;
+    display: none;
+}
+
+ul li a:hover {
+    background: rgb(218, 162, 162);
+}
+ul li:hover ul.dropdown {
+    display: block;
+}
+
 ul{
     padding-top: 10;
     padding-right: 20px;
@@ -28,31 +49,6 @@ ul{
 ul li{
     display: inline-block;
     position: relative;
-}
-ul li a {
-    display: block;
-    padding: 5px 10px;
-    color: #473838;
-    text-decoration: none;
-    text-align: center;
-    font-size: 20px;
-}
-ul li ul.dropdown li {
-    display: block;
-}
-ul li ul.dropdown {
-    width: 100%;
-    background: white;
-    position: absolute;
-    z-index: 999;
-    display: none;
-
-}
-ul li a:hover {
-    background: rgb(218, 162, 162);
-}
-ul li:hover ul.dropdown {
-    display: block;
 }
 
 span{
